--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.8.0",
     "utf8": "^3.0.0"
   },
   "scripts": {
